<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/button2_first"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/second_button" />
     <Button
        android:id="@+id/button2_second"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/second_button2" />
    <FrameLayout
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    >

		<TextView
		    android:layout_width="300dp"
		    android:layout_height="300dp"
		    android:background="#123456"
		    android:layout_gravity="center"
		    android:id="@+id/textView1"
		    android:text="@string/page1" />

		<TextView
		    android:layout_width="250dp"
		    android:layout_height="250dp"
		    android:background="#456789"
		    android:layout_gravity="center"
		    android:id="@+id/textView2"
		    android:text="@string/page2" />

		<TextView
		    android:layout_width="200dp"
		    android:layout_height="200dp"
		    android:background="#abcdef"
		    android:layout_gravity="center"
		    android:id="@+id/textView3"
		    android:text="@string/page3" />

		<TextView
		    android:layout_width="150dp"
		    android:layout_height="150dp"
		    android:background="#0f0"
		    android:layout_gravity="center"
		    android:id="@+id/textView4"
		    android:text="@string/page4" />

		<ProgressBar
		    android:layout_gravity="center"
		    android:id="@+id/progressBar1"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content" />

		<TextView
		    android:layout_gravity="center"
		    android:id="@+id/textView5"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/number1" />
	    
	</FrameLayout>

</LinearLayout>
